--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Document</title>
 </head>
 <body>
-<script src="index.js"></script>
+    <input id="search" type="button" value="Search">
+    <script src="grid.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
