--- a/index.html
+++ b/index.html
@@ -2,10 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>A - star</title>
+
+    <style>
+        html, body {
+            margin: 0;
+            width: 100%;
+            height: 100%;
+        }
+        
+    </style>
 </head>
 <body>
-    <input id="search" type="button" value="Search">
+    <div id="container"></div>
+
+    <div class="info">
+        <input id="search" type="button" value="Search">
+        <input id="clear" type="button" value="Clear">
+    </div>
+    
     <script src="grid.js"></script>
     <script src="index.js"></script>
 </body>
