--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         <input id="clear" type="button" value="Clear">
     </div>
     
+    <script src="pathfinding-browser.js"></script>
     <script src="grid.js"></script>
-    <script src="search-3.js"></script>
+    <script src="search-pf.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
